Connection string and initial migration

--- a/Dmail/Dmail.Data/Dmail.Data.csproj
+++ b/Dmail/Dmail.Data/Dmail.Data.csproj
@@ -7,10 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dmail.Domain\Dmail.Domain.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Folder Include="Enums" />
     </ItemGroup>
 
@@ -20,6 +16,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="7.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
