--- a/Dmail/Dmail.Presentation/App.config
+++ b/Dmail/Dmail.Presentation/App.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <connectionStrings>
-        <add/>
+        <add name="DmailApp" connectionString="Server=127.0.0.1;Port=5432;Database=db_dmail;User Id=postgres;Password=postgres;"/>
     </connectionStrings>
 </configuration>
