Creating basic CRUD operations for each entity

--- a/Dmail/Dmail.Domain/Dmail.Domain.csproj
+++ b/Dmail/Dmail.Domain/Dmail.Domain.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Dmail.Data\Dmail.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Factories" />
+      <Folder Include="Models" />
+    </ItemGroup>
+
 </Project>
