Data seed and created password lib

--- a/Dmail/Dmail.Domain/Dmail.Domain.csproj
+++ b/Dmail/Dmail.Domain/Dmail.Domain.csproj
@@ -14,4 +14,8 @@
       <Folder Include="Models" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+    </ItemGroup>
+
 </Project>
